tinyc/test/bad/addrof-void.c
void foo() {}

int main()
{
    void *p = &foo();
    return 0;
}
